@@ -40,6 +40,7 @@ Preproc/VPreproc.cpp
 Preproc/VPreproc.h
 Preproc/VPreprocLex.h
 Preproc/VPreprocLex.l
+Preproc/xsubppfix
 README
 t/00_pod.t
 t/01_manifest.t
